Mon Jun 24 00:03 GMT 2003 Jim Segrave jes@jes-2.demon.nl

	* Use deprecated gtk_spin_button_get_value_as_float, for gtk1.2
	  compatibility

Mon Jun 23 21:31 GMT 2003 Jim Segrave jes@jes-2.demon.nl

	* allow terminating rollouts early if all the standard errors are
	  below a user set fraction of the value
	  gnubg.c set.c gtkgame.c show.c rollout.c eval.h backgammon.h

Mon Jun 23 09:07:38 2003  Joseph Heled  <pepster@users.sourceforge.net>

u	* eval.c (DumpAnyContact): Fix incorrect indexing into inputs vector. (Broken for
	a long time. Since no one really noticed, I guess this proves they are not very
	useful).

Sun Jun 22 12:42:10 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* eval.c (DumpContact): fix for crashed positions. 

Sat Jun 14 13:18:34 2003  Joern Thyssen  <jth@gnubg.org>

	* osr.c: Small rewrite of one sided rollout to handle chequers on the
	bar.

Sat Jun 14 12:35:47 2003  Joern Thyssen  <jth@gnubg.org>

  	New commands to allow modification of cube efficiency
	(note that the values are *NOT* saved with "save settings").

	* gnubg.c: new commands.
	* eval.c (EvalEfficiency): use new values.

Fri Jun 13 08:47:50 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* fix bearoff-database targets in Makefile.[ia] to invoke
	  makebearoff with an output file name, delete attempt to
	  make target gnubg.bd
	
Thu Jun 12 20:58:18 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (FindnSaveBestMoves): evaluate top move and actual move
	on the highest ply if their difference in equity exceeds the
	given threshold.
	(change all callers)
	* eval.c (FindnSaveBestMoves): fix bug leading to duplicate
	moves in the movelist.
	(reported/suggested by Michael Depreli)

Mon Jun  9 23:20:00 2003  Joern Thyssen  <jth@gnubg.org>

	Allow modifications of the match length during edit.

	* gtkboard.c (board_init): add spin button for match length.
	* gtkboard.c (score_updated): new function.
	* gtkboard.c (board_edit): issue "set matchid ..." when match 
	length changes.
